[UPD] base_wua: Added media query for mobile devices.  * Added media query for screens smaller than 920 px to avoid links like mail not being visibles.

--- a/base_wua/static/src/css/base_wua.css
+++ b/base_wua/static/src/css/base_wua.css
@@ -321,3 +321,12 @@
 .o_base_wua_parcel_partnerlink_view_tree [data-id="area_official_other_costs_net"] {
     text-align: right;
 }
+
+
+/** Media QUERY FOR Mobile Devices, which didn't show the complete email */
+
+@media (max-width: 920px) {
+    .o_form_view .o_group .o_form_field.o_text_overflow {
+        width: unset!important;
+    }
+  }
